Added block_size for file backends in propolis_server (workers is optional) (#917)
Add block_size to the file backend

Update propolis-server and propolis-standalone to accept block_size
and (optionally) a worker count for the file backend.

---------
