# crates/propolis-api-types/src/instance_spec/components/backends.rs
@@ -8,6 +8,7 @@
 
 use schemars::JsonSchema;
 use serde::{Deserialize, Serialize};
+use std::num::NonZeroUsize;
 
 /// A Crucible storage backend.
 #[derive(Clone, Deserialize, Serialize, JsonSchema)]
@@ -47,6 +48,12 @@ pub struct FileStorageBackend {
 
     /// Indicates whether the storage is read-only.
     pub readonly: bool,
+
+    /// Block size of the backend
+    pub block_size: u32,
+
+    /// Optional worker threads for the file backend, exposed for testing only.
+    pub workers: Option<NonZeroUsize>,
 }
 
 /// A storage backend for a disk whose initial contents are given explicitly
